# SCIMon_code

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/uml/: cmp_scimon.puml  seq_device_init.puml
src/_shared_/include/Control/: main_control.hpp
src/_shared_/include/Core/: common.hpp
src/_shared_/include/Devices/: builtin_payload_decoder.hpp  config_device_message.hpp  config_is_message.hpp  configuration_payload.hpp  data_response_payload.hpp  device.hpp  device_configuration.hpp  device_id.hpp  device_message.hpp  dummy_device.hpp  generic_read_payload.hpp  id_payload.hpp  impedance_spectrometer.hpp  init_device_message.hpp  init_payload.hpp  is_configuration.hpp  is_payload.hpp  key_response_payload.hpp  message_impedance_spectrometer.hpp  payload.hpp  payload_decoder.hpp  read_device_message.hpp  read_payload.hpp  read_spectrum_message.hpp  request_data_payload.hpp  request_key_payload.hpp  set_device_status_payload.hpp  set_pressure_payload.hpp  status_payload.hpp  write_device_message.hpp  write_payload.hpp
src/_shared_/include/Devices/elveflow_ob1/: device_ob1.hpp  device_ob1_win.hpp  init_payload_ob1.hpp  ob1_conf_payload.hpp  ob1_constants.hpp  ob1_init_payload.hpp  ob1_payload_decoder.hpp  read_payload_ob1.hpp
src/_shared_/include/Devices/isx3/: ack_message_isx3.hpp  com_interface_codec.hpp  device_isx3.hpp  device_isx3_win.hpp  init_message_isx3.hpp  isx3_ack_payload.hpp  isx3_cmd_ack_struct.hpp  isx3_command_buffer.hpp  isx3_constants.hpp  isx3_init_payload.hpp  isx3_is_conf_payload.hpp  isx3_payload_decoder.hpp
src/_shared_/include/Gui/: config_tab.hpp  config_tab_isx3.hpp  config_tab_ob1.hpp  config_tab_sentry.hpp  controller_plot.hpp  line_plot.hpp  spectroplot.hpp  spectroplot_data.hpp
src/_shared_/include/Messages/: config_device_message.hpp  config_is_message.hpp  device_message.hpp  device_status_message.hpp  dummy_message.hpp  handshake_message.hpp  init_device_message.hpp  message_distributor.hpp  message_factory.hpp  message_interface.hpp  read_device_message.hpp  read_spectrum_message.hpp  user_id.hpp  write_device_message.hpp
src/_shared_/include/Messages/elveflow_ob1/: write_message_ob1.hpp
src/_shared_/include/Messages/isx3/: init_message_isx3.hpp
src/_shared_/include/Utilities/: blocking_reader.hpp  socket_wrapper.hpp  utilities.hpp  utilities_flatbuffers.hpp  win_socket.hpp
src/_shared_/include/Utilities/data_manager/: data_manager.hpp  data_manager_hdf.hpp
src/_shared_/include/Utility/: utility.hpp
src/_shared_/include/Workers/: sentry_worker.hpp  worker.hpp
src/_shared_/include/Workers/control_worker/: control_worker.hpp  control_worker_wrapper.hpp
src/_shared_/include/Workers/network_worker/: network_worker.hpp  network_worker_init_payload.hpp  network_worker_state_payload.hpp
src/_shared_/include/Workers/sentry_worker/: sentry_config_payload.hpp  sentry_init_payload.hpp  sentry_payload_decoder.hpp  sentry_worker.hpp
src/_shared_/src/Control/: main_control.cpp
src/_shared_/src/Core/: common.cpp
src/_shared_/src/Devices/: builtin_payload_decoder.cpp  config_is_message.cpp  configuration_payload.cpp  data_response_payload.cpp  device.cpp  device_configuration.cpp  device_id.cpp  device_message.cpp  dummy_device.cpp  generic_read_payload.cpp  id_payload.cpp  impedance_spectrometer.cpp  is_configuration.cpp  is_payload.cpp  key_response_payload.cpp  message_impedance_spectrometer.cpp  read_device_message.cpp  read_payload.cpp  read_spectrum_message.cpp  request_data_payload.cpp  request_key_payload.cpp  set_device_status_payload.cpp  set_pressure_payload.cpp  status_payload.cpp  write_payload.cpp
src/_shared_/src/Devices/elveflow_ob1/: device_ob1.cpp  device_ob1_win.cpp  device_ob1_win_mockup.cpp  init_payload_ob1.cpp  ob1_conf_payload.cpp  ob1_init_payload.cpp  ob1_payload_decoder.cpp  (+1 more)
src/_shared_/src/Gui/: config_tab.cpp  config_tab_isx3.cpp  config_tab_ob1.cpp  config_tab_sentry.cpp  controller_plot.cpp  line_plot.cpp  spectroplot.cpp  spectroplot_data.cpp
src/_shared_/src/Messages/: config_device_message.cpp  config_is_message.cpp  device_message.cpp  device_status_message.cpp  dummy_message.cpp  handshake_message.cpp  init_device_message.cpp  message_distributor.cpp  message_factory.cpp  message_interface.cpp  read_device_message.cpp  read_spectrum_message.cpp  user_id.cpp  write_device_message.cpp
src/_shared_/src/Utilities/: blocking_reader.cpp  socket_wrapper.cpp  utilities.cpp  utilities_flatbuffers.cpp  win_socket.cpp
src/_shared_/src/Utility/: utility.cpp
src/_shared_/src/Workers/: sentry_worker.cpp  worker.cpp
src/res/flatbuffers/: device_message.fbs  handshake_message_content.fbs  message.fbs  write_device_message_content.fbs
src/res/flatbuffers/Devices/: data_response_payload.fbs  generic_read_payload.fbs  init_payload.fbs  is_payload.fbs  key_response_payload.fbs  read_payload.fbs  request_data_payload.fbs  request_key_payload.fbs  set_device_state_payload.fbs  set_pressure_payload.fbs  status_payload.fbs
src/res/flatbuffers/Messages/: config_device_message_content.fbs  device_message.fbs  handshake_message_content.fbs  init_device_message_content.fbs  read_device_message_content.fbs  write_device_message_content.fbs
src/scripts/csv2plot/: conda.env  csv2plot.py
src/scripts/sciospec2csv/: conda.env  sciospec2csv.py
src/test/test_data_manager/: CMakeLists.txt  test_data_manager.cpp
src/test/test_epix/: CMakeLists.txt  test_epix.cpp
src/test/test_is_measurement/: CMakeLists.txt  test_is_measurement.cpp
src/test/test_isx3/: CMakeLists.txt  isx3_software_mocker.cpp  isx3_software_mocker.hpp  test_isx3.cpp
src/test/test_message_distributor/: CMakeLists.txt  test_message_distributor.cpp
src/test/test_message_factory/: CMakeLists.txt  test_message_factory.cpp
src/test/test_network_worker/: CMakeLists.txt  test_device.cpp  test_device.hpp  test_network_worker.cpp
src/test/test_ob1/: CMakeLists.txt  test_ob1.cpp
src/test/test_sciospec_com_interface/: CMakeLists.txt  test_sciospec_com_interface.cpp
src/test/test_utility/: CMakeLists.txt  test_utility.cpp
(+32 files in other folders)
